# QuillMD

./: .gitignore  App.xaml  App.xaml.cs  HELP.md  LICENSE  MainWindow.xaml  MainWindow.xaml.cs  PlannamTypora.csproj  QuillMD.csproj  README.md
Models/: MarkdownDocument.cs
Services/: FileService.cs  HtmlToMarkdown.cs  ImportService.cs  MarkItDownService.cs  MarkdownConverter.cs  MarkdownHighlighting.xshd  SettingsService.cs  SingleInstance.cs  TableEditHelper.cs  WebPreviewBridge.cs
Themes/: DarkTheme.xaml  LightTheme.xaml
ViewModels/: DocumentTabViewModel.cs
Views/: ImportProgressDialog.xaml  ImportProgressDialog.xaml.cs
docs/: RELEASE.md
docs/plans/: 2026-03-06-typora-feature-parity.md  2026-04-19-markitdown-import-design.md  2026-04-19-markitdown-import-plan.md
docs/superpowers/plans/: 2026-04-28-pinned-recents.md  2026-04-28-single-instance.md
docs/superpowers/specs/: 2026-04-28-fijar-archivos-recientes-design.md  2026-04-28-single-instance-design.md
installer/: QuillMD-Setup.iss
tools/markitdown-bundle/: .gitignore  README.md  build.ps1  entry.py  notices_to_markdown.py  pyproject.toml
