[project]
name = "markitdown-bundle"
version = "0.1.0"
description = "Bundle Python de markitdown para QuillMD"
requires-python = ">=3.11"
dependencies = [
    "markitdown[pdf,docx,pptx,xlsx,outlook]==0.1.2",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.11.0",
    "pip-licenses>=5.0.0",
]
